[MOD] update theme twig extension

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,3 +20,8 @@ services:
            class: Twig_Extensions_Extension_Text
            tags:
                - { name: twig.extension }
+    twig.extension.theme_extension:
+        class: KitWebBundle\Twig\ThemeExtension
+        arguments: ["@service_container"]
+        tags:
+            - { name: twig.extension }
