[MOD] add theme service

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -25,3 +25,6 @@ services:
         arguments: ["@service_container"]
         tags:
             - { name: twig.extension }
+    kit_admin.theme_service:
+        class: KitAdminBundle\Service\ThemeService
+        arguments: ["@doctrine"]
