[MOD] add pay bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+kit_pay:
+    resource: "@KitPayBundle/Resources/config/routing.yml"
+    prefix:   /
+
 kit_rbac:
     resource: "@KitRbacBundle/Resources/config/routing.yml"
     prefix:   /admin/rbac
