--- a/src/Kit/Bundle/KitPayBundle/Resources/config/services.yml
+++ b/src/Kit/Bundle/KitPayBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    kit_pay.example:
 #        class: Kit\Bundle\KitPayBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+    kit_pay.example:
+        class: Kit\Bundle\KitPayBundle\PaymentService
+        arguments: ["@service_id", "plain_value", "%parameter%"]
