--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "liip/imagine-bundle": "^1.7",
         "twig/extensions": "^1.4",
         "kitlabs/kit-oss-bundle": "^0.1.3",
-        "liip/theme-bundle": "^1.4"
+        "liip/theme-bundle": "^1.4",
+        "kitlabs/kit-pay-bundle": "~0.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
