[MOD] add custom exception

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,6 +44,7 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    exception_controller:  twig.controller.exception:showAction
 
 # Doctrine Configuration
 doctrine:
