--- a/src/KitAdminBundle/Resources/config/routing.yml
+++ b/src/KitAdminBundle/Resources/config/routing.yml
@@ -11,6 +11,9 @@ kit_admin_upload:
 kit_admin_flow:
     path:     /flow
     defaults: { _controller: KitAdminBundle:Default:flow }
+kit_admin_test:
+    path:     /flow
+    defaults: { _controller: KitAdminBundle:Default:test }
 kit_admin_login:
     path:     /login
     defaults: { _controller: KitAdminBundle:Login:login }
