--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
     - { resource: "@KitWebBundle/Resources/config/services.yml" }
     - { resource: "@KitRbacBundle/Resources/config/services.yml" }
     - { resource: "@KitOssBundle/Resources/config/services.yml" }
+    - { resource: "@KitApiBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
