--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.4"
     },
     "scripts": {
         "symfony-scripts": [
