[MOD] add dev kit table prefix bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+kit_table_prefix:
+    resource: "@KitTablePrefixBundle/Resources/config/routing.yml"
+    prefix:   /
+
 kit_api:
     resource: "@KitApiBundle/Resources/config/routing.yml"
     prefix:   /api
