--- a/src/KitAdminBundle/Resources/config/routing.yml
+++ b/src/KitAdminBundle/Resources/config/routing.yml
@@ -16,6 +16,9 @@ kit_admin_upload:
 kit_admin_flow:
     path:     /flow
     defaults: { _controller: KitAdminBundle:Default:flow }
+kit_admin_workflow:
+    path:     /workflow
+    defaults: { _controller: KitAdminBundle:Default:workflow }
 kit_admin_test:
     path:     /test
     defaults: { _controller: KitAdminBundle:Default:test }
