--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "kitlabs/kit-oss-bundle": "^0.1.3",
         "liip/theme-bundle": "^1.4",
         "kitlabs/kit-pay-bundle": "~0.1",
-        "eightpoints/guzzle-bundle": "^6.1"
+        "eightpoints/guzzle-bundle": "^6.1",
+        "kitlabs/kit-crypt-bundle": "^0.1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
