--- a/src/KitRbacBundle/Resources/config/routing.yml
+++ b/src/KitRbacBundle/Resources/config/routing.yml
@@ -1,27 +1,22 @@
 kit_rbac_user:
-    path:     /user/{page}
-    defaults: { _controller: KitRbacBundle:Default:index, page: 1 }
-    requirements:
-        page: '\d+'
+    path:     /
+    defaults: { _controller: RbacBundle:Default:index}
 kit_rbac_user_add:
     path:     /add
-    defaults: { _controller: KitRbacBundle:Default:add }
+    defaults: { _controller: RbacBundle:Default:add }
 kit_rbac_user_delete:
     path:     /del
-    defaults: { _controller: KitRbacBundle:Default:delete }
+    defaults: { _controller: RbacBundle:Default:delete }
 kit_rbac_user_update:
-    path:     /update/{id}
-    defaults: { _controller: KitRbacBundle:Default:update, id: 1 }
-    requirements:
-        id: '\d+'
+    path:     /update
+    defaults: { _controller: RbacBundle:Default:update }
+    
 kit_rbac_role:
-    path:     /role/{page}
-    defaults: { _controller: KitRbacBundle:Role:index, page: 1 }
-    requirements:
-        page: '\d+'
+    path:     /role
+    defaults: { _controller: RbacBundle:Role:index }
 kit_rbac_role_add:
     path:     /role/add
-    defaults: { _controller: KitRbacBundle:Role:add }
+    defaults: { _controller: RbacBundle:Role:add }
 kit_rbac_role_del:
     path:     /role/del
-    defaults: { _controller: KitRbacBundle:Role:del }
+    defaults: { _controller: RbacBundle:Role:del }
